# Wiki-MJCF

./: CHANGELOG.md  CMakeLists.txt  GR1T1_raw.mjcf  LICENSE  README.en.md  README.md  package.xml  requirements.txt  setup.py
docs/: README.md
launch/: urdf2mjcf_converter.launch
models/GR1/GR1T1/meshes/: base.STL  head_pitch.STL  head_roll.STL  head_yaw.STL  l_foot_pitch.STL  l_foot_roll.STL  l_hand_pitch.STL  l_hand_yaw.STL  l_thigh_pitch.STL  l_thigh_roll.STL  l_thigh_yaw.STL  l_upper_arm_pitch.STL  l_upper_arm_roll.STL  l_upper_arm_yaw.STL  r_foot_pitch.STL  r_hand_pitch.STL  r_hand_yaw.STL  r_shank_pitch.STL  r_thigh_pitch.STL  r_thigh_roll.STL  r_thigh_yaw.STL  r_upper_arm_pitch.STL  r_upper_arm_roll.STL  r_upper_arm_yaw.STL  waist_pitch.STL  waist_roll.STL  waist_yaw.STL
models/GR1/GR1T1/mjcf/: GR1T1.mjcf  GR1T1_raw.mjcf
models/GR1/GR1T1/urdf/: GR1T1_raw.urdf
models/GR1/GR1T2/mjcf/: GR1T2_raw.mjcf
models/mujoco_menagerie/: README.md
models/mujoco_menagerie/fourier_intelligence_gr1t1/: LICENSE  README.md  gr1t1.xml  gr1t1_raw.xml  scene.xml
models/mujoco_menagerie/fourier_intelligence_gr1t2/: README.md  gr1t2.xml  gr1t2_raw.xml  scene.xml
scripts/: urdf2mjcf  urdf2mjcf_ros
src/urdf2mjcf/: app.py  cli.py  core.py  utils.py
src/urdf2mjcf/default_elements/: ground.py  lighting.py
test/: test_mujoco_passthrough.py  test_preprocess.py  test_urdf2mjcf.py  utils.py
test/inputs/: ip_model_1.xml  ip_model_2.urdf  ip_model_3.urdf  mujoco.xml  panda.urdf  sensors.xml
test/outputs/: op_model_1.xml  op_model_2.xml  panda_mjnoded.xml  panda_sensored.xml
(+59 files in other folders)
